--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -41,7 +41,7 @@
   <div class="avatar-container">
     <div class="avatar-img-border">
       <a href="{{ site.url }} ">
-        <img class="avatar-img" src="{{ site.url }}/img/profile-pic-color.jpg" />
+	      <img class="avatar-img" src="{{ site.avatar | prepend: site.baseurl | replace: '//', '/' }}" />
      </a>
     </div>
   </div>
