--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -24,8 +24,14 @@ layout: default
     </p>
 
     <div class="post-entry">
+      <!-- original
       {{ post.content | strip_html | xml_escape | truncatewords: 50 }}
       <a href="{{ post.url | prepend: site.baseurl }}" class="post-read-more">[Read&nbsp;More]</a>
+      -->
+      {{ post.content | split:'<!--break-->' | first }}
+      {% if post.content contains '<!--break-->' %}
+         <a href="{{ post.url | prepend: site.baseurl }}" class="post-read-more">[Read&nbsp;More]</a>
+      {% endif %}
     </div>
 
     <div class="blog-tags">
